--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.7.3",
+    "@types/nodemailer": "^6.4.16",
     "global-agent": "^3.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/redis": "^4.0.10",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.4",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "redis": "^4.7.0"
   }
 }
