--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.3",
     "@types/nodemailer": "^6.4.16",
+    "@types/redis": "^4.0.10",
+    "@types/socket.io-redis": "^1.0.27",
     "global-agent": "^3.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@types/redis": "^4.0.10",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.4",
     "nodemailer": "^6.9.15",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "socket.io-redis": "^6.1.1"
   }
 }
