--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "vercel-build": "npm run build",
     "start": "node dist/index.js"
   },
   "keywords": [],
